--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <label for="targeting-cookie"> Ανάλυσης (Google Analytics)</label>
   </p>
   <div style="margin-top: 2rem;">
-    <a id="acceptAll" href="#">Αποδοχή όλων (TODO)
+    <a id="acceptAll" href="#">Αποδοχή όλων
     </a>
 
     <a id="accept" href="#">Αποδοχή Επιλεγμένων
@@ -87,6 +87,6 @@
 </div>
 
 
-  <script src="aead-cookie-consent.js"></script>
+  <script src="gdpr-cookie-consent.js"></script>
 </body>
 </html>
