--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </div>
 </div>
 <div>
-  <a id="enable-cookie-banner" href="#">Enable cookie banner</a>
+  <a id="enable-cookie-banner" href="#">Διαχείριση Cookies</a>
 </div>
 
 
