replace ga3 with ga4

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
     <a id="accept" href="#">Αποδοχή Επιλεγμένων
     </a>
 
+    <!-- TODO -->
+    <!-- <a id="decline" href="#">Απόρριψη Επιλεγμένων
+    </a> -->
+
   
   </div>
 </div>
