--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
+  <title>Δοκιμή cookie consent </title>
+  <meta name="description" content="Δοκιμή cookie consent ">
   <meta name="author" content="">
 
   <link rel="stylesheet" href="style.css">
@@ -44,7 +44,8 @@
   </script>
 
 
-
+<h2>PRIVACY OPTIONS ENABLED</h2>
+<!-- data-src instead of src -->
 <iframe 
   width="560" 
   height="315" 
@@ -56,6 +57,8 @@
   allowfullscreen>
 </iframe>
 
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/vFPPJSs5pto?si=81GlE161pL7w2QkJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 <img data-alt-src="image.jpg" alt="">
 
 <div id="consent-popup" class="hidden">
@@ -63,28 +66,26 @@
     Χρησιμοποιούμε τα cookies που είναι αναγκαία για τη διατήρηση της σύνδεσής σας στις ηλεκτρονικές υπηρεσίες της Διαδικτυακής Πύλης (ΔΠ) της Αρχής και για την αποθήκευση των επιλογών σας σε σχέση με τα προαιρετικά cookies («Αναγκαία»).
   Με τη συγκατάθεσή σας και μόνο θα χρησιμοποιήσουμε όποια από τα ακόλουθα προαιρετικά cookies επιλέξετε («Ανάλυσης», «Λειτουργικότητας»). 
   </p>
+
   <p>
     <input type="checkbox" id="strict-cookie" name="strict-cookie" checked="true" disabled='true'>
     <label for="strict-cookie"> Αναγκαία</label>
+
     <input type="checkbox" id="functionality-cookie" name="functionality-cookie" value="functionality">
     <label for="functionality-cookie"> Λειτουργικότητας (YouTube)</label>
+
     <input type="checkbox" id="targeting-cookie" name="targeting-cookie" value="targeting">
     <label for="targeting-cookie"> Ανάλυσης (Google Analytics)</label>
   </p>
+
   <div style="margin-top: 2rem;">
-    <a id="acceptAll" href="#">Αποδοχή όλων
-    </a>
-
-    <a id="accept" href="#">Αποδοχή Επιλεγμένων
-    </a>
-
-    <!-- TODO -->
-    <!-- <a id="decline" href="#">Απόρριψη Επιλεγμένων
-    </a> -->
-
-  
+    <a id="acceptAll" href="#">Αποδοχή όλων</a>
+    <a id="denyAll" href="#">Απόρριψη όλων</a>    
+    <a id="acceptSelected" href="#">Αποδοχή Επιλεγμένων</a> 
   </div>
+
 </div>
+
 <div>
   <a id="enable-cookie-banner" href="#">Διαχείριση Cookies</a>
 </div>
