--- a/index.html
+++ b/index.html
@@ -63,16 +63,14 @@
 
 <div id="consent-popup" class="hidden">
   <p>
-    Χρησιμοποιούμε τα cookies που είναι αναγκαία για τη διατήρηση της σύνδεσής σας στις ηλεκτρονικές υπηρεσίες της Διαδικτυακής Πύλης (ΔΠ) της Αρχής και για την αποθήκευση των επιλογών σας σε σχέση με τα προαιρετικά cookies («Αναγκαία»).
-  Με τη συγκατάθεσή σας και μόνο θα χρησιμοποιήσουμε όποια από τα ακόλουθα προαιρετικά cookies επιλέξετε («Ανάλυσης», «Λειτουργικότητας»). 
-  </p>
+    Χρησιμοποιούμε τα cookies που είναι αναγκαία για τη διατήρηση της σύνδεσής σας στις ηλεκτρονικές υπηρεσίες της Διαδικτυακής Πύλης (ΔΠ) της Αρχής και για την αποθήκευση των επιλογών σας σε σχέση με τα προαιρετικά cookies («Αναγκαία»). Με τη συγκατάθεσή σας και μόνο θα χρησιμοποιήσουμε όποια από τα ακόλουθα προαιρετικά cookies επιλέξετε («Ανάλυσης», «Λειτουργικότητας»).  </p>
 
   <p>
     <input type="checkbox" id="strict-cookie" name="strict-cookie" checked="true" disabled='true'>
     <label for="strict-cookie"> Αναγκαία</label>
 
     <input type="checkbox" id="functionality-cookie" name="functionality-cookie" value="functionality">
-    <label for="functionality-cookie"> Λειτουργικότητας (YouTube)</label>
+    <label for="functionality-cookie"> Λειτουργικότητας</label>
 
     <input type="checkbox" id="targeting-cookie" name="targeting-cookie" value="targeting">
     <label for="targeting-cookie"> Ανάλυσης (Google Analytics)</label>
